[package]
name = "nerio"
version = "0.1.1"
authors = ["Mark Mandriota <myriaxont@gmail.com>"]
edition = "2024"
description = "generic for neural networks"
repository = "https://github.com/mandriota/nerio"
license = "Apache-2.0"
keywords = ["nerienet", "neural", "network", "nn"]
categories = ["data-structures"]

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
rand = "0.9.1"

[lints.rust]
warnings = "deny"
dead_code = "allow"
unused_macros = "allow"

[[bench]]
name = "linalg"
harness = false
